deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-app
  template:
    metadata:
      labels:
        app: simple-app
    spec:
      containers:
      - name: simple-app
        image: mernacr123321.azurecr.io/simple-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
