service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app
  namespace: prod
spec:
  type: LoadBalancer
  selector:
    app: simple-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
