k8s.yaml
# 🔥 DEV DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-app-dev
  template:
    metadata:
      labels:
        app: simple-app-dev
    spec:
      containers:
      - name: simple-app
        image: mernacr123321.azurecr.io/simple-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
---
# 🔥 DEV SERVICE
apiVersion: v1
kind: Service
metadata:
  name: simple-app-dev
spec:
  selector:
    app: simple-app-dev
  ports:
  - port: 80
    targetPort: 4000

---
# 🔥 DEV INGRESS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-app-dev-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-port: "4000"
    appgw.ingress.kubernetes.io/health-probe-path: "/health"
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: dev.pramodkumar.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-app-dev
            port:
              number: 80

---
# 🔥 PROD DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-app-prod
  template:
    metadata:
      labels:
        app: simple-app-prod
    spec:
      containers:
      - name: simple-app
        image: mernacr123321.azurecr.io/simple-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
---
# 🔥 PROD SERVICE
apiVersion: v1
kind: Service
metadata:
  name: simple-app-prod
spec:
  selector:
    app: simple-app-prod
  ports:
  - port: 80
    targetPort: 4000

---
# 🔥 PROD INGRESS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-app-prod-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-port: "4000"
    appgw.ingress.kubernetes.io/health-probe-path: "/health"
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: pramodkumar.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-app-prod
            port:
              number: 80
